# microgan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  microgan-spec.md  pyproject.toml  run_pipeline.sh
microgan/: cli.py
microgan/convert/: to_c_array.py  to_tflite.py
microgan/train/: trainer.py
runtime/: Makefile  MicroGAN_runtime.c  MicroGAN_runtime.h
tinygen/: cli.py
tinygen/compress/: ptq.py
tinygen/train/: dcgan.py
tinygen/validate/: pc_reference.py
