[project]
name = "microgan"
version = "0.1.0"
description = "Train and deploy tiny GANs on microcontrollers"
dependencies = [
    "torch",
    "torchvision",
    "click",
    "numpy",
    "onnx",
    "onnx-tf",
    "tensorflow",
    "pyyaml",
    "pillow",
    "tqdm"
]

[project.scripts]
microgan = "microgan.cli:main"

[tool.setuptools]
packages = ["microgan"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
